Increased z-index of header to get rid of YT/Twitter widget bug & changed font declarations to remove Gotham faux-bold

--- a/css/site.css
+++ b/css/site.css
@@ -39,7 +39,7 @@ table { width: 100%; border: 1px solid #333; }
 
 /* HEADING STYLES
 ---------------------------------------------------------*/
-h1,h2,h3 { font-weight: normal; font-family: "Gotham-Bold", "Helvetica Neue", helvetica, arial, sans-serif; }
+h1,h2,h3 { font-weight: normal; font-family: Gotham, "Helvetica Neue", helvetica, arial, sans-serif; }
 
 h1 { font-size: 36px; line-height: 1.5; }
 h2 { text-align: left !important; padding-bottom: 5px; margin-bottom: .5em; line-height: 1.5em; font-size: 22px; color: #555; font-weight: 700; border-bottom: 1px solid #d1d1d1;}
@@ -64,7 +64,7 @@ h3 { font-size: 22px; line-height: 1.5; }
 /* HEADER STYLES
 -------------------------------------------------------------------------------- */
 header {
-  display: block; width: 100%; position: fixed; height: 40px; border-bottom: 1px solid #1A1A1A; z-index: 1;
+  display: block; width: 100%; position: fixed; height: 40px; border-bottom: 1px solid #1A1A1A; z-index: 9999;
   background: #000;
   background: -moz-linear-gradient(top,  #555 0%, #2b2b2b 50%, #262626 50%, #090909 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#484848), color-stop(50%,#2b2b2b), color-stop(50%,#262626), color-stop(100%,#090909));
